--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
+/public/d3Demo.html
+/public/d3demo2.html
